// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A user queue system add three users should give the index 1`] = `
UserQueue {
  "pEnd": LNode {
    "data": Object {
      "id": 3,
      "index": 2,
      "name": "c",
    },
    "next": null,
  },
  "pHead": LNode {
    "data": Object {
      "id": 1,
      "index": 0,
      "name": "a",
    },
    "next": LNode {
      "data": Object {
        "id": 2,
        "index": 1,
        "name": "b",
      },
      "next": LNode {
        "data": Object {
          "id": 3,
          "index": 2,
          "name": "c",
        },
        "next": null,
      },
    },
  },
}
`;

exports[`A user queue system add three users should give the index 2`] = `
UserQueue {
  "pEnd": LNode {
    "data": Object {
      "id": 3,
      "index": 1,
      "name": "c",
    },
    "next": null,
  },
  "pHead": LNode {
    "data": Object {
      "id": 2,
      "index": 0,
      "name": "b",
    },
    "next": LNode {
      "data": Object {
        "id": 3,
        "index": 1,
        "name": "c",
      },
      "next": null,
    },
  },
}
`;
